SFDCProject/src/objects/Appointment_Region__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hollywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Luis Obispo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventura</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nor Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Appointment Region</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>Branch__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Territory__c</columns>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>Demetrio Amaya</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Denver</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>startsWith</operation>
            <value>Denver</value>
        </filters>
        <label>Denver</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonHunter</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Territory__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>Don Hunter</value>
        </filters>
        <label>DonHunter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>East_Bay_1</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>East Bay 1</value>
        </filters>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>contains</operation>
            <value>Joseph</value>
        </filters>
        <label>East Bay 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JoshBurke</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Territory__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>contains</operation>
            <value>Joseph</value>
        </filters>
        <label>JoshBurke</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA2</fullName>
        <columns>Branch__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Territory__c</columns>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>Massachusetts 2</value>
        </filters>
        <label>MA2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Matt</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Territory__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>equals</operation>
            <value>Matt Cash</value>
        </filters>
        <label>Matt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Michael_Spreng</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>contains</operation>
            <value>Michael Spreng</value>
        </filters>
        <label>Michael Spreng</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Hampshire</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>New Hampshire</value>
        </filters>
        <label>New Hampshire</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Jersey</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>startsWith</operation>
            <value>New Jersey</value>
        </filters>
        <label>New Jersey</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_York_2</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>New York 2</value>
        </filters>
        <label>New York 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>North_San_Diego</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>startsWith</operation>
            <value>North San Diego</value>
        </filters>
        <label>North San Diego</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Orange_County</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Branch__c</columns>
        <columns>Priority__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>startsWith</operation>
            <value>Orange</value>
        </filters>
        <label>Orange County</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QAuser</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Territory__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>contains</operation>
            <value>[212C]SR- New York Zone C</value>
        </filters>
        <label>QAuser</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QAuser04</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Territory__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Branch__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>South Bay 1</value>
        </filters>
        <label>QAuser04</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Appointment Region</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>